read complete